adding recaptcha to all the pages

--- a/Products.html
+++ b/Products.html
@@ -245,6 +245,7 @@
         }
     </style>
     <title>GenOasis - Products</title>
+	<script src="https://www.google.com/recaptcha/api.js?render=6LdbbNEqAAAAAICt9O0PGfaTPi4ikCI8gBVaannf"></script>
 </head>
 
 <body>
@@ -922,5 +923,6 @@
             offset: 100
         });
     </script>
+    <script src="js/recaptcha.js"></script>
 </body>
 </html>
