--- a/about.html
+++ b/about.html
@@ -26,6 +26,7 @@
 			}
 		</style>
 		<title>GenOasis - About Us</title>
+		<script src="https://www.google.com/recaptcha/api.js?render=6LdbbNEqAAAAAICt9O0PGfaTPi4ikCI8gBVaannf"></script>
 	</head>
 	<body>
 
@@ -267,6 +268,7 @@
 		<script src="js/bootstrap.bundle.min.js"></script>
 		<script src="js/tiny-slider.js"></script>
 		<script src="js/custom.js"></script>
+		<script src="js/recaptcha.js"></script>
 	</body>
 
 </html>
