--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
 		<link href="css/tiny-slider.css" rel="stylesheet">
 		<link href="css/style.css" rel="stylesheet">
 		<title>GenOasis - Home</title>
+		<script src="https://www.google.com/recaptcha/api.js?render=6LdbbNEqAAAAAICt9O0PGfaTPi4ikCI8gBVaannf"></script>
 	</head>
 
 	<body>
@@ -357,6 +358,7 @@
 		<script src="js/bootstrap.bundle.min.js"></script>
 		<script src="js/tiny-slider.js"></script>
 		<script src="js/custom.js"></script>
+		<script src="js/recaptcha.js"></script>
 	</body>
 
 </html>
