new look with additional changes

--- a/about.html
+++ b/about.html
@@ -28,6 +28,18 @@
 		<title>GenOasis - About Us</title>
 		<script src="https://www.google.com/recaptcha/api.js?render=6LdbbNEqAAAAAICt9O0PGfaTPi4ikCI8gBVaannf"></script>
 	</head>
+		<!-- Start Top Bar -->
+	<div class="top-bar py-2">
+		<div class="container">
+			<div class="row">
+				<div class="col-md-12 text-end">
+					<span class="me-3"><i class="fas fa-phone"></i>+91 893 916 7316</span>
+					<span><i class="fas fa-envelope"></i> info@genoasis.com</span>
+				</div>
+			</div>
+		</div>
+	</div>
+	<!-- End Top Bar -->
 	<body>
 
 		<!-- Start Header/Navigation -->
@@ -244,6 +256,14 @@
 								</ul>
 							</div>
 
+							<!-- Add Contact Information Section -->
+							<div class="col-6 col-sm-6 col-md-4">
+								<ul class="list-unstyled">
+									<li><i class="fas fa-map-marker-alt me-2"></i>6, Balaji St, Guduvancherry<br>Chennai, Tamil Nadu, India</li>
+									<li><i class="fas fa-phone me-2"></i>+91 8939 167 316</li>
+									<li><i class="fas fa-envelope me-2"></i>info@genoasis.com</li>
+								</ul>
+							</div>
 
 						</div>
 					</div>
