--- a/Products.html
+++ b/Products.html
@@ -247,7 +247,18 @@
     <title>GenOasis - Products</title>
 	<script src="https://www.google.com/recaptcha/api.js?render=6LdbbNEqAAAAAICt9O0PGfaTPi4ikCI8gBVaannf"></script>
 </head>
-
+	<!-- Start Top Bar -->
+	<div class="top-bar py-2">
+		<div class="container">
+			<div class="row">
+				<div class="col-md-12 text-end">
+					<span class="me-3"><i class="fas fa-phone"></i> +91 893 916 7316</span>
+					<span><i class="fas fa-envelope"></i> info@genoasis.com</span>
+				</div>
+			</div>
+		</div>
+	</div>
+	<!-- End Top Bar -->
 <body>
     <!-- Start Header/Navigation -->
     <nav class="custom-navbar navbar navbar navbar-expand-md navbar-dark bg-dark" arial-label="GenOasis navigation bar">
@@ -521,7 +532,7 @@
 							<div class="content-column" data-aos="fade-left" data-aos-duration="1000">
 								<h2 class="category-title">CHEMICALS</h2>
 								<div class="description">
-									<p>With over 25 years in the chemical industry, GenOasis offers a range of chemical solutions for water treatment, from pre-treatment to post-treatment processes. We design dosing systems and recommend suitable products based on each application's needs.</p>
+									<p>GenOasis offers a range of chemical solutions for water treatment, from pre-treatment to post-treatment processes. We design dosing systems and recommend suitable products based on each application's needs.</p>
 								</div>
 								<p>Our solutions include:</p>
 								<ul class="elementor-icon-list-items">
@@ -897,6 +908,14 @@
 								<li><a href="contact.html">Contact us</a></li>
                             </ul>
                         </div>
+						<!-- Add Contact Information Section -->
+						<div class="col-6 col-sm-6 col-md-4">
+							<ul class="list-unstyled">
+								<li><i class="fas fa-map-marker-alt me-2"></i>6, Balaji St, Guduvancherry<br>Chennai, Tamil Nadu, India</li>
+								<li><i class="fas fa-phone me-2"></i>+91 893 916 7316</li>
+								<li><i class="fas fa-envelope me-2"></i>info@genoasis.com</li>
+							</ul>
+						</div>
                     </div>
                 </div>
             </div>
