--- a/Products.html
+++ b/Products.html
@@ -243,6 +243,49 @@
                 height: 300px;
             }
         }
+
+        /* Add these new styles */
+        .image-popup {
+            display: none;
+            position: fixed;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+            z-index: 1000;
+            max-width: 800px; /* Set a fixed max-width */
+            max-height: 800px; /* Set a fixed max-height */
+            box-shadow: 0 0 20px rgba(0,0,0,0.5);
+            border-radius: 8px;
+            overflow: hidden;
+            pointer-events: none; /* Prevents the popup from interfering with hover */
+        }
+
+        .image-popup img {
+            width: 100%;
+            height: 100%;
+            object-fit: contain;
+        }
+
+        .popup-overlay {
+            display: none;
+            position: fixed;
+            top: 0;
+            left: 0;
+            right: 0;
+            bottom: 0;
+            background-color: rgba(0,0,0,0.8);
+            z-index: 999;
+            pointer-events: none; /* Prevents the overlay from interfering with hover */
+        }
+
+        .image-column {
+            cursor: pointer;
+            transition: opacity 0.3s;
+        }
+
+        .image-column:hover {
+            opacity: 0.9;
+        }
     </style>
     <title>GenOasis - Products</title>
 	<script src="https://www.google.com/recaptcha/api.js?render=6LdbbNEqAAAAAICt9O0PGfaTPi4ikCI8gBVaannf"></script>
@@ -251,9 +294,15 @@
 	<div class="top-bar py-2">
 		<div class="container">
 			<div class="row">
-				<div class="col-md-12 text-end">
-					<span class="me-3"><i class="fas fa-phone"></i> +91 893 916 7316</span>
-					<span><i class="fas fa-envelope"></i> info@genoasis.com</span>
+				<div class="col-12">
+					<div class="d-flex justify-content-end">
+						<a href="tel:+918939167316" class="me-3 text-decoration-none text-dark">
+							<i class="fas fa-phone"></i> +91 893 916 7316
+						</a>
+						<a href="mailto:info@genoasis.com" class="text-decoration-none text-dark">
+							<i class="fas fa-envelope"></i> info@genoasis.com
+						</a>
+					</div>
 				</div>
 			</div>
 		</div>
@@ -334,7 +383,9 @@
 								</ul>
 							</div>
 							<div class="image-column" data-aos="fade-left" data-aos-duration="1000" 
-								 style="background-image: url('images/pumps.jpg');"></div>
+								 style="background-image: url('images/pumps.jpg');"
+								 data-hover-image="images/pumps-detail.jpg">
+							</div>
 						</div>
 					</div>
 				</div>
@@ -344,7 +395,8 @@
 					<div class="e-con-inner">
 						<div class="row">
 							<div class="image-column" data-aos="fade-right" data-aos-duration="1000" 
-								 style="background-image: url('images/filters.jpg');"></div>
+								 style="background-image: url('images/filters.jpg');"
+								 data-hover-image="images/filters-detail.jpg"></div>
 							<div class="content-column" data-aos="fade-left" data-aos-duration="1000">
 								<h2 class="category-title">FILTERS & FILTER HOUSINGS</h2>
 								<div class="description">
@@ -438,7 +490,8 @@
 								</ul>
 							</div>
 							<div class="image-column" data-aos="fade-left" data-aos-duration="1000" 
-								 style="background-image: url('images/multimedia.jpg');"></div>
+								 style="background-image: url('images/multimedia.jpg');"
+								 data-hover-image="images/multimedia-detail.jpg"></div>
 						</div>
 					</div>
 				</div>
@@ -448,7 +501,8 @@
 					<div class="e-con-inner">
 						<div class="row">
 							<div class="image-column" data-aos="fade-right" data-aos-duration="1000" 
-								 style="background-image: url('images/ultrafiltration.jpg');"></div>
+								 style="background-image: url('images/ultrafiltration.jpg');"
+								 data-hover-image="images/ultrafiltration-detail.jpg"></div>
 							<div class="content-column" data-aos="fade-left" data-aos-duration="1000">
 								<h2 class="category-title">ULTRAFILTRATION MODULES</h2>
 								<div class="description">
@@ -518,7 +572,8 @@
 								</ul>
 							</div>
 							<div class="image-column" data-aos="fade-left" data-aos-duration="1000" 
-								 style="background-image: url('images/ro-membranes.jpg');"></div>
+								 style="background-image: url('images/ro-membranes.jpg');"
+								 data-hover-image="images/ro-membranes-detail.jpg"></div>
 						</div>
 					</div>
 				</div>
@@ -528,7 +583,8 @@
 					<div class="e-con-inner">
 						<div class="row">
 							<div class="image-column" data-aos="fade-right" data-aos-duration="1000" 
-								 style="background-image: url('images/chemicals.jpg');"></div>
+								 style="background-image: url('images/chemicals.jpg');"
+								 data-hover-image="images/chemicals-detail.jpg"></div>
 							<div class="content-column" data-aos="fade-left" data-aos-duration="1000">
 								<h2 class="category-title">CHEMICALS</h2>
 								<div class="description">
@@ -610,7 +666,8 @@
 								</ul>
 							</div>
 							<div class="image-column" data-aos="fade-left" data-aos-duration="1000" 
-								 style="background-image: url('images/ion-exchange.jpg');"></div>
+								 style="background-image: url('images/ion-exchange.jpg');"
+								 data-hover-image="images/ion-exchange-detail.jpg"></div>
 						</div>
 					</div>
 				</div>
@@ -620,7 +677,8 @@
 					<div class="e-con-inner">
 						<div class="row">
 							<div class="image-column" data-aos="fade-right" data-aos-duration="1000" 
-								 style="background-image: url('images/disinfection.jpg');"></div>
+								 style="background-image: url('images/disinfection.jpg');"
+								 data-hover-image="images/disinfection-detail.jpg"></div>
 							<div class="content-column" data-aos="fade-left" data-aos-duration="1000">
 								<h2 class="category-title">DISINFECTION</h2>
 								<div class="description">
@@ -678,7 +736,8 @@
 								</ul>
 							</div>
 							<div class="image-column" data-aos="fade-left" data-aos-duration="1000" 
-								 style="background-image: url('images/pressure-vessels.jpg');"></div>
+								 style="background-image: url('images/pressure-vessels.jpg');"
+								 data-hover-image="images/pressure-vessels-detail.jpg"></div>
 						</div>
 					</div>
 				</div>
@@ -768,7 +827,8 @@
 					<div class="e-con-inner">
 						<div class="row">
 							<div class="image-column" data-aos="fade-right" data-aos-duration="1000" 
-								 style="background-image: url('images/wastewater.jpg');"></div>
+								 style="background-image: url('images/wastewater.jpg');"
+								 data-hover-image="images/wastewater-detail.jpg"></div>
 							<div class="content-column" data-aos="fade-left" data-aos-duration="1000">
 								<h2 class="category-title">BIO MEDIA</h2>
 								<div class="description">
@@ -846,7 +906,8 @@
 								</ul>
 							</div>
 							<div class="image-column" data-aos="fade-left" data-aos-duration="1000" 
-								 style="background-image: url('images/air-diffusers.jpg');"></div>
+								 style="background-image: url('images/air-diffusers.jpg');"
+								 data-hover-image="images/air-diffusers-detail.jpg"></div>
 						</div>
 					</div>
 				</div>
@@ -856,7 +917,8 @@
 					<div class="e-con-inner">
 						<div class="row">
 							<div class="image-column" data-aos="fade-right" data-aos-duration="1000" 
-									style="background-image: url('images/wastewater.jpg');"></div>
+									style="background-image: url('images/wastewater.jpg');"
+									data-hover-image="images/tube-settler-detail.jpg"></div>
 							<div class="content-column" data-aos="fade-left" data-aos-duration="1000">
 								<h2 class="category-title">TUBE SETTLER MEDIA</h2>
 								<div class="description">
@@ -943,5 +1005,33 @@
         });
     </script>
     <script src="js/recaptcha.js"></script>
+    <div class="popup-overlay"></div>
+    <div class="image-popup">
+        <img src="" alt="Product detail image">
+    </div>
+    <script>
+        document.addEventListener('DOMContentLoaded', function() {
+            const imageColumns = document.querySelectorAll('.image-column');
+            const popup = document.querySelector('.image-popup');
+            const popupImg = popup.querySelector('img');
+            const overlay = document.querySelector('.popup-overlay');
+
+            imageColumns.forEach(column => {
+                column.addEventListener('mouseenter', function() {
+                    const hoverImage = this.getAttribute('data-hover-image');
+                    if (hoverImage) {
+                        popupImg.src = hoverImage;
+                        popup.style.display = 'block';
+                        overlay.style.display = 'block';
+                    }
+                });
+
+                column.addEventListener('mouseleave', function() {
+                    popup.style.display = 'none';
+                    overlay.style.display = 'none';
+                });
+            });
+        });
+    </script>
 </body>
 </html>
