--- a/index.html
+++ b/index.html
@@ -27,9 +27,15 @@
 		<div class="top-bar py-2">
 			<div class="container">
 				<div class="row">
-					<div class="col-md-12 text-end">
-						<span class="me-3"><i class="fas fa-phone"></i> +91 893 916 7316</span>
-						<span><i class="fas fa-envelope"></i> info@genoasis.com</span>
+					<div class="col-12">
+						<div class="d-flex justify-content-end">
+							<a href="tel:+918939167316" class="me-3 text-decoration-none text-dark">
+								<i class="fas fa-phone"></i> +91 893 916 7316
+							</a>
+							<a href="mailto:info@genoasis.com" class="text-decoration-none text-dark">
+								<i class="fas fa-envelope"></i> info@genoasis.com
+							</a>
+						</div>
 					</div>
 				</div>
 			</div>
