--- a/Products.html
+++ b/Products.html
@@ -531,10 +531,12 @@
                 </div>
 
                 <div class="col-md-6 col-lg-3">
-                    <div class="product-item">
-                        <img src="images/wastewater.jpg" alt="Wastewater Equipments">
-                        <div class="product-name">Wastewater Equipments</div>
-                    </div>
+					<a href="Wastewater.html" class="text-decoration-none">
+						<div class="product-item">
+							<img src="images/wastewater.jpg" alt="Wastewater Equipments">
+							<div class="product-name">Wastewater Equipments</div>
+						</div>
+					</a>
                 </div>
             </div>
         </div>
