--- a/contact.html
+++ b/contact.html
@@ -134,9 +134,11 @@
                 </div>
               </div>
 
-              <form id="contactForm" action="https://formspree.io/f/mjkgawdz" method="POST" onsubmit="submitForm(event)">
-                <input type="hidden" name="_to" value="info@genoasis.com">
-                <input type="hidden" name="_subject" value="GenOasis Website Contact Form">
+              <form action="https://api.web3forms.com/submit" method="POST" id="contactForm" onsubmit="submitForm(event)">
+                <!-- Web3Forms Required Fields -->
+                <input type="hidden" name="access_key" value="013fb824-fdc7-447d-bfd2-30ff8c7df89d">
+                <input type="hidden" name="subject" value="New Contact Form Submission - GenOasis">
+                <input type="hidden" name="from_name" value="GenOasis Website">
                 <input type="hidden" id="g-recaptcha-response" name="g-recaptcha-response">
                 
                 <div class="row">
@@ -172,8 +174,6 @@
                 <div id="errorMessage" class="alert alert-danger" style="display: none;">
                   Sorry, there was an error sending your message. Please try again.
                 </div>
-
-                <input type="hidden" id="g-recaptcha-response" name="g-recaptcha-response">
 
                 <button type="submit" class="btn btn-primary">Send Message</button>
               </form>
@@ -280,22 +280,19 @@
 		      document.getElementById('g-recaptcha-response').value = token;
 		      const formData = new FormData(form);
 
-		      const response = await fetch('https://formspree.io/f/mjkgawdz', {
+		      const response = await fetch('https://api.web3forms.com/submit', {
 		        method: 'POST',
-		        body: formData,
-		        headers: {
-		          'Accept': 'application/json'
-		        }
+		        body: formData
 		      });
 
 		      const data = await response.json();
 
-		      if (response.ok) {
+		      if (data.success) {
 		        successMessage.style.display = 'block';
 		        form.reset();
 		        window.scrollTo({ top: successMessage.offsetTop - 100, behavior: 'smooth' });
 		      } else {
-		        throw new Error(data.error || 'Form submission failed');
+		        throw new Error(data.message || 'Form submission failed');
 		      }
 		    } catch (error) {
 		      console.error('Form submission error:', error);
