--- a/Wastewater.html
+++ b/Wastewater.html
@@ -10,7 +10,14 @@
 	<link rel="manifest" href="/site.webmanifest" />
     <meta name="description" content="" />
     <meta name="keywords" content="bootstrap, bootstrap4" />
-
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-RPG7M7CLBF"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+        gtag('config', 'G-RPG7M7CLBF');
+    </script>
     <!-- Bootstrap CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
