--- a/Wastewater.html
+++ b/Wastewater.html
@@ -533,10 +533,14 @@
     </div>
     <!-- End Hero Section -->
 
-    <div class="container" style="margin-top: 50px;">
+    <!-- MBBR Media -->
+    <div class="container mt-5">
         <div class="row mb-5">
             <div class="col-12">
                 <div class="row">
+                    <div class="col-md-4 d-flex align-items-start justify-content-center">
+                        <img src="images/mbbrmedia.jpg" alt="MBBR Media" style="max-width: 200px; margin-top: 20px;">
+                    </div>
                     <div class="col-md-8">
                         <h2 class="mb-4">MBBR Media</h2>
                         <p class="lead mb-4">
@@ -660,9 +664,6 @@
                             <span class="show-less d-none">Show Less</span>
                         </button>
                     </div>
-                    <div class="col-md-4 d-flex align-items-start justify-content-center">
-                        <img src="images/mbbrmedia.jpg" alt="MBBR Media" style="max-width: 200px; margin-top: 20px;">
-                    </div>
                 </div>
             </div>
         </div>
@@ -722,10 +723,14 @@
         }
     </style>
 
+    <!-- BIO-BLOK -->
     <div class="container">
         <div class="row mb-5">
             <div class="col-12">
                 <div class="row">
+                    <div class="col-md-4 d-flex align-items-start justify-content-center">
+                        <img src="images/bioblock.jpg" alt="BIO-BLOK Filter Media" style="max-width: 200px; margin-top: 20px;">
+                    </div>
                     <div class="col-md-8">
                         <h2 class="mb-4">BIO-BLOK Filter Media</h2>
                         <p class="lead mb-4">
@@ -793,18 +798,19 @@
                             <span class="show-less d-none">Show Less</span>
                         </button>
                     </div>
-                    <div class="col-md-4 d-flex align-items-start justify-content-center">
-                        <img src="images/bioblock.jpg" alt="BIO-BLOK Filter Media" style="max-width: 200px; margin-top: 20px;">
-                    </div>
                 </div>
             </div>
         </div>
     </div>
 
+    <!-- Bio Chip -->
     <div class="container">
         <div class="row mb-5">
             <div class="col-12">
                 <div class="row">
+                    <div class="col-md-4 d-flex align-items-start justify-content-center">
+                        <img src="images/biochip.jpg" alt="Bio Chip" style="max-width: 200px; margin-top: 20px;">
+                    </div>
                     <div class="col-md-8">
                         <h2 class="mb-4">Bio Chip</h2>
                         <p class="lead mb-4">
@@ -866,19 +872,20 @@
                             <span class="show-less d-none">Show Less</span>
                         </button>
                     </div>
-                    <div class="col-md-4 d-flex align-items-start justify-content-center">
-                        <img src="images/biochip.jpg" alt="Bio Chip" style="max-width: 200px; margin-top: 20px;">
-                    </div>
                 </div>
             </div>
         </div>
     </div>
 
+    <!-- Lamella Tube Settler Media -->
     <div class="container">
         <div class="row mb-5">
             <div class="col-12">
                 <div class="row">
-                    <div class="col-md-8">
+                    <div class="col-md-4 d-flex align-items-start justify-content-center order-md-1">
+                        <img src="images/tubesettler.jpg" alt="Lamella Tube Settler Media" style="max-width: 200px; margin-top: 20px;">
+                    </div>
+                    <div class="col-md-8 order-md-2">
                         <h2 class="mb-4">Lamella Tube Settler Media</h2>
                         <p class="lead mb-4">
                             Tubular settlers and parallel plates improve the settling capacity of circular clarifiers and/or rectangular settling tanks by reducing the vertical distance that flocculated particles must settle before they coalesce to form larger particles.
@@ -932,18 +939,19 @@
                             <span class="show-less d-none">Show Less</span>
                         </button>
                     </div>
-                    <div class="col-md-4 d-flex align-items-start justify-content-center">
-                        <img src="images/tubesettler.jpg" alt="Lamella Tube Settler Media" style="max-width: 200px; margin-top: 20px;">
-                    </div>
                 </div>
             </div>
         </div>
     </div>
 
+    <!-- Coarse Bubble Diffusers -->
     <div class="container">
         <div class="row mb-5">
             <div class="col-12">
                 <div class="row">
+                    <div class="col-md-4 d-flex align-items-start justify-content-center">
+                        <img src="images/coarsebubble.jpg" alt="Coarse Bubble Diffusers" style="max-width: 200px; margin-top: 20px;">
+                    </div>
                     <div class="col-md-8">
                         <h2 class="mb-4">Coarse Bubble Diffusers</h2>
                         <p class="lead mb-4">
@@ -1000,64 +1008,20 @@
                             <span class="show-less d-none">Show Less</span>
                         </button>
                     </div>
-                    <div class="col-md-4 d-flex align-items-start justify-content-center">
-                        <img src="images/coarsebubble.jpg" alt="Coarse Bubble Diffusers" style="max-width: 200px; margin-top: 20px;">
-                    </div>
                 </div>
             </div>
         </div>
     </div>
 
+    <!-- Fine Bubble Disc Diffuser -->
     <div class="container">
         <div class="row mb-5">
             <div class="col-12">
                 <div class="row">
-                    <div class="col-md-8">
-                        <h2 class="mb-4">Submerged Aerobic Fixed Film Reactor (SAFF MEDIA)</h2>
-                        <p class="lead mb-4">
-                            Submerged Aerobic Fixed Film Reactor (SAFF) is a cost-effective method of waste water treatment and sewage sanitation that is primarily used in residential and commercial complexes.
-                        </p>
-
-                        <div class="collapse" id="saffMediaDetails">
-                            <p class="mb-4">
-                                This technology primarily has on the three stages that are Primary Settlement, Secondary Treatment and Final Settlement / Clarification.
-                            </p>
-
-                            <h3 class="mb-3">Features</h3>
-                            <ul class="feature-list">
-                                <li>Upgrading existing rock trickling filters BOD</li>
-                                <li>Reduction in Trickling Filters Complete Secondary</li>
-                                <li>Treatment Trickling Filters/Solids Contact(TF/SC)</li>
-                                <li>Roughing of pre-treatment</li>
-                                <li>Nitrification De-nitrification</li>
-                                <li>Odor Scrubbing. Anaerobic Treatment</li>
-                                <li>SAFF or submerged aerobic fixed film reactors</li>
-                            </ul>
-
-                            <h3 class="mb-3 mt-4">APPLICATION:</h3>
-                            <p>
-                                SAFFMEDIA has numerous applications in Waste water treatment. The shape of the media has a significant influence on application and must be considered along specific surface area and void ratio.
-                            </p>
-                        </div>
-
-                        <button class="btn btn-primary mt-3" type="button" data-bs-toggle="collapse" data-bs-target="#saffMediaDetails" aria-expanded="false" aria-controls="saffMediaDetails">
-                            <span class="show-more">Show More</span>
-                            <span class="show-less d-none">Show Less</span>
-                        </button>
+                    <div class="col-md-4 d-flex align-items-start justify-content-center order-md-1">
+                        <img src="images/finebubble.jpg" alt="Fine Bubble Disc Diffuser" style="max-width: 200px; margin-top: 20px;">
                     </div>
-                    <div class="col-md-4 d-flex align-items-start justify-content-center">
-                        <img src="images/saffmedia.jpg" alt="SAFF Media" style="max-width: 200px; margin-top: 20px;">
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-
-    <div class="container">
-        <div class="row mb-5">
-            <div class="col-12">
-                <div class="row">
-                    <div class="col-md-8">
+                    <div class="col-md-8 order-md-2">
                         <h2 class="mb-4">FINE BUBBLE DISC DIFFUSER</h2>
                         <p class="lead mb-4">
                             Disc diffusers have 3 parts as lower part, frame and membrane. Disc Diffusers can be installed to HDPE, PVC or stainless steel pipes by PP Saddles. Material of frame and lower part is PP (polypropylene) and supported with %30 GPR for UV rays and different chemical processes.
@@ -1126,18 +1090,19 @@
                             <span class="show-less d-none">Show Less</span>
                         </button>
                     </div>
-                    <div class="col-md-4 d-flex align-items-start justify-content-center">
-                        <img src="images/finebubble.jpg" alt="Fine Bubble Disc Diffuser" style="max-width: 200px; margin-top: 20px;">
-                    </div>
                 </div>
             </div>
         </div>
     </div>
 
+    <!-- Tube Diffusers -->
     <div class="container">
         <div class="row mb-5">
             <div class="col-12">
                 <div class="row">
+                    <div class="col-md-4 d-flex align-items-start justify-content-center">
+                        <img src="images/tubediffuser.jpg" alt="Tube Diffusers" style="max-width: 200px; margin-top: 20px;">
+                    </div>
                     <div class="col-md-8">
                         <h2 class="mb-4">TUBE DIFFUSERS</h2>
                         <p class="lead mb-4">
@@ -1259,19 +1224,20 @@
                             <span class="show-less d-none">Show Less</span>
                         </button>
                     </div>
-                    <div class="col-md-4 d-flex align-items-start justify-content-center">
-                        <img src="images/tubediffuser.jpg" alt="Tube Diffusers" style="max-width: 200px; margin-top: 20px;">
-                    </div>
                 </div>
             </div>
         </div>
     </div>
 
+    <!-- Stainless Steel Coarse Bubble -->
     <div class="container">
         <div class="row mb-5">
             <div class="col-12">
                 <div class="row">
-                    <div class="col-md-8">
+                    <div class="col-md-4 d-flex align-items-start justify-content-center order-md-1">
+                        <img src="images/steelcoarse.jpg" alt="Stainless Steel Coarse Bubble Tube Diffuser" style="max-width: 200px; margin-top: 20px;">
+                    </div>
+                    <div class="col-md-8 order-md-2">
                         <h2 class="mb-4">STAINLESS STEEL COARSE BUBBLE TUBE DIFFUSER</h2>
                         <p class="lead mb-4">
                             Genoasis Coarse Bubble Tube Diffuser is used to provide a homogeneous mixture in chemical preservation units, equalization tanks, chemical mixing and oil separation of wastewater treatment plants.
@@ -1335,18 +1301,19 @@
                             <span class="show-less d-none">Show Less</span>
                         </button>
                     </div>
-                    <div class="col-md-4 d-flex align-items-start justify-content-center">
-                        <img src="images/steelcoarse.jpg" alt="Stainless Steel Coarse Bubble Tube Diffuser" style="max-width: 200px; margin-top: 20px;">
-                    </div>
                 </div>
             </div>
         </div>
     </div>
 
+    <!-- Plate Diffuser -->
     <div class="container">
         <div class="row mb-5">
             <div class="col-12">
                 <div class="row">
+                    <div class="col-md-4 d-flex align-items-start justify-content-center">
+                        <img src="images/platediffuser.jpg" alt="Plate Diffuser" style="max-width: 200px; margin-top: 20px;">
+                    </div>
                     <div class="col-md-8">
                         <h2 class="mb-4">PLATE DIFFUSER</h2>
                         <p class="lead mb-4">
@@ -1407,19 +1374,20 @@
                             <span class="show-less d-none">Show Less</span>
                         </button>
                     </div>
-                    <div class="col-md-4 d-flex align-items-start justify-content-center">
-                        <img src="images/platediffuser.jpg" alt="Plate Diffuser" style="max-width: 200px; margin-top: 20px;">
-                    </div>
                 </div>
             </div>
         </div>
     </div>
 
+    <!-- Panel Diffuser -->
     <div class="container">
         <div class="row mb-5">
             <div class="col-12">
                 <div class="row">
-                    <div class="col-md-8">
+                    <div class="col-md-4 d-flex align-items-start justify-content-center order-md-1">
+                        <img src="images/paneldiffuser.jpg" alt="Panel Diffuser" style="max-width: 200px; margin-top: 20px;">
+                    </div>
+                    <div class="col-md-8 order-md-2">
                         <h2 class="mb-4">PANEL DIFFUSER</h2>
                         <p class="lead mb-4">
                             Genoasis Panel Diffusers operate with higher oxygen transfer efficiency, unique membrane diversity and strong body with different structure and higher air capacity than other diffusers.
@@ -1498,18 +1466,19 @@
                             <span class="show-less d-none">Show Less</span>
                         </button>
                     </div>
-                    <div class="col-md-4 d-flex align-items-start justify-content-center">
-                        <img src="images/paneldiffuser.jpg" alt="Panel Diffuser" style="max-width: 200px; margin-top: 20px;">
-                    </div>
                 </div>
             </div>
         </div>
     </div>
 
+    <!-- PP Saddle -->
     <div class="container">
         <div class="row mb-5">
             <div class="col-12">
                 <div class="row">
+                    <div class="col-md-4 d-flex align-items-start justify-content-center">
+                        <img src="images/ppsaddle.jpg" alt="PP Saddle" style="max-width: 200px; margin-top: 20px;">
+                    </div>
                     <div class="col-md-8">
                         <h2 class="mb-4">PP SADDLE</h2>
                         <p class="lead mb-4">
@@ -1577,19 +1546,20 @@
                             <span class="show-less d-none">Show Less</span>
                         </button>
                     </div>
-                    <div class="col-md-4 d-flex align-items-start justify-content-center">
-                        <img src="images/ppsaddle.jpg" alt="PP Saddle" style="max-width: 200px; margin-top: 20px;">
-                    </div>
                 </div>
             </div>
         </div>
     </div>
 
+    <!-- Grommed -->
     <div class="container">
         <div class="row mb-5">
             <div class="col-12">
                 <div class="row">
-                    <div class="col-md-8">
+                    <div class="col-md-4 d-flex align-items-start justify-content-center order-md-1">
+                        <img src="images/grommed.jpg" alt="Grommed" style="max-width: 200px; margin-top: 20px;">
+                    </div>
+                    <div class="col-md-8 order-md-2">
                         <h2 class="mb-4">GROMMED</h2>
                         <p class="lead mb-4" style="word-wrap: break-word;">
                             Genoasis accessories and spare parts are designed to be used on products made by Genoasis or products made by other producers. Installation of Genoasis accessories and spare parts is extremely simple and can be done without any complicated and expensive equipment needed, performance, on the other hand, reaches highest level.
@@ -1598,18 +1568,22 @@
                             Genoasis accessories and spare parts are great and economical solution for old treatment plants and applications where only some parts of equipment has to be replaced.
                         </p>
                     </div>
-                    <div class="col-md-4 d-flex align-items-start justify-content-center">
-                        <img src="images/grommed.jpg" alt="Grommed" style="max-width: 200px; margin-top: 20px;">
-                    </div>
                 </div>
             </div>
         </div>
     </div>
 
+    <!-- Dewatering Bag - Special case with two images -->
     <div class="container">
         <div class="row mb-5">
             <div class="col-12">
                 <div class="row">
+                    <div class="col-md-4">
+                        <div class="d-flex flex-column align-items-center">
+                            <img src="images/dewatering1.jpg" alt="Dewatering Bag 1" class="img-fluid mb-4" style="max-width: 200px;">
+                            <img src="images/dewatering2.jpg" alt="Dewatering Bag 2" class="img-fluid" style="max-width: 200px;">
+                        </div>
+                    </div>
                     <div class="col-md-8">
                         <h2 class="mb-4">Dewatering Bag</h2>
                         <p class="lead mb-4">
@@ -1649,12 +1623,6 @@
                             <span class="show-more">Show More</span>
                             <span class="show-less d-none">Show Less</span>
                         </button>
-                    </div>
-                    <div class="col-md-4">
-                        <div class="d-flex flex-column align-items-center">
-                            <img src="images/dewatering1.jpg" alt="Dewatering Bag 1" class="img-fluid mb-4" style="max-width: 200px;">
-                            <img src="images/dewatering2.jpg" alt="Dewatering Bag 2" class="img-fluid" style="max-width: 200px;">
-                        </div>
                     </div>
                 </div>
             </div>
